Finished implementing KGD's suggestions for Chapter 1 and half of Chapter 2. Stopped at pg 33.

--- a/abstract.tex
+++ b/abstract.tex
@@ -13,12 +13,12 @@ its dynamics.
 To generate a novel texture, a randomly initialized input sequence is optimized
 to match the feature statistics from each
 stream of an example texture.  
-Inspired by recent work on image style transfer and enabled by the
+In addition, inspired by recent work on image style transfer and enabled by the
 two-stream model, the synthesis approach is applied to combine the
 texture appearance from one texture with the dynamics of another 
 to generate entirely novel dynamic textures.
-The proposed approach generates novel, high quality samples 
+Overall, the proposed approach generates novel, high quality samples 
 that match both the framewise appearance and temporal evolution
 of input texture.
-Finally, a quantitative evaluation of the proposed dynamic texture synthesis approach is performed via a thorough user study.
+Finally, a quantitative evaluation of the proposed dynamic texture synthesis approach is performed via a large-scale user study.
 \end{abstract}
