--- a/fig_texture_synthesis.tex
+++ b/fig_texture_synthesis.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t]
 \begin{center}
 	\epsfig{file=texture_synthesis.pdf, width = 0.8\textwidth}\\
-	\caption[Texture synthesis]{(Static) texture synthesis is the process of algorithmically constructing a texture (right) that matches or extends a given source texture (left) by taking advantage of its structural content.}
+	\caption[Texture synthesis]{Texture synthesis is the process of algorithmically constructing a texture (right) that matches or extends a given source texture (left) by taking advantage of its structural content.}
 	\vspace{-0.65cm}
 	\label{fig:texture_synthesis}
 \end{center}
